Apply fix: Automated fixing issues